[tool.poetry]
name = "gbif-alert"
version = "1.9.0"
description = "A GBIF-based early alert system"
authors = ["Nicolas Noé <nicolas@niconoe.eu>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.1"
requests = "^2.26.0"
gbif-blocking-occurrence-download = "^0.1.0"
python-dwca-reader = "^0.16.4"
jinjasql = "^0.1.8"
django-maintenance-mode = "0.21.1"
django-import-export = "^3.2.0"
django-cors-headers = "^4.2.0"
django-markdownx = "^4.0.2"
django-rq = "^2.5.1"
html2text = "2024.2.25"
Jinja2 = "3.0.3" # just needed for JinjaSQL, but it currently has a tendency to download an incompatible version (3.1.1). I hope we'll be able to remove that fake dependency once JinjaSQL gets updated (https://github.com/sripathikrishnan/jinjasql/issues/50)
django-taggit = "^5.0.1"
django-modeltranslation = "^0.18.9"
python-dotenv = "^1.0.0"
django-gisserver = "^1.2.7"
setuptools = "*"
django-vite = "^3.1.0"
django-ninja = "^1.6.2"
whitenoise = "^6.7.0"
gunicorn = "^25.0.3"
[tool.poetry.group.dev.dependencies]
mypy = "1.4"
django-stubs = "4.2.3"
types-requests = "^2.28.11.15"
black = "^23.1.0"
mapbox-vector-tile = "^2.0.1"
requests-mock = "^1.10.0"
tblib = "^1.7.0"
pytest = "^9.0.2"
pytest-django = "^4.12.0"
pytest-env = "^1.1.0"
pytest-playwright = "^0.7.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "djangoproject.settings"
testpaths = ["dashboard/tests"]
markers = [
    "sequential: marks tests as sequential (avoids DB deadlocks when run in parallel)",
]
# Safety-net env defaults for the env-driven settings module. Loaded by
# pytest-env BEFORE Django settings are imported. Each entry uses
# `D:` prefix (= "default") which means: do NOT override values the
# developer/CI already set, but provide them if absent.
env = [
    "D:SECRET_KEY=test-secret-key-not-for-production",
    "D:DEBUG=False",
    "D:DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,testserver",
    "D:SITE_BASE_URL=http://localhost",
    "D:SITE_NAME=GBIF Alert (test)",
    "D:DATABASE_URL=postgis://postgres:postgres@127.0.0.1:5432/github_actions",
    "D:RQ_REDIS_URL=redis://127.0.0.1:6379/0",
    "D:GBIF_DOWNLOAD_USERNAME=test",
    "D:GBIF_DOWNLOAD_PASSWORD=test",
    "D:ENABLED_LANGUAGES=en,fr",
    "D:GBIF_DOWNLOAD_COUNTRY=BE",
    "D:GBIF_DOWNLOAD_YEAR_MIN=2000",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
