[project]
name = "gbif-alert"
version = "1.9.0"
description = "A GBIF-based early alert system"
authors = [{ name = "Nicolas Noé", email = "nicolas@niconoe.eu" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Django>=5.2,<6",
    "dj-database-url>=2.2.0,<3",
    "psycopg[binary]>=3.2,<4",
    "requests>=2.26.0,<3",
    "gbif-blocking-occurrence-download>=0.1.0,<0.2",
    "python-dwca-reader>=0.16.4,<0.17",
    "jinjasql>=0.1.8,<0.2",
    "django-maintenance-mode>=0.22.0,<0.23",
    "django-import-export>=4.4.0,<5",
    "django-cors-headers>=4.2.0,<5",
    "django-markdownx>=4.0.2,<5",
    "django-rq>=4.0,<5",
    "html2text==2024.2.25",
    # Pinned only for JinjaSQL, which tends to pull an incompatible 3.1.x.
    # Drop once JinjaSQL is updated (https://github.com/sripathikrishnan/jinjasql/issues/50).
    "Jinja2==3.0.3",
    "django-taggit>=6.0,<7",
    "django-modeltranslation>=0.20.0,<0.21",
    "python-dotenv>=1.0.0,<2",
    "django-gisserver>=2.0,<3",
    "setuptools",
    "django-vite>=3.1.0,<4",
    "django-ninja>=1.6.2,<2",
    "whitenoise>=6.7.0,<7",
    "gunicorn>=25.0.3,<26",
]

[dependency-groups]
dev = [
    "mypy>=1.14,<2",
    "django-stubs>=5.2.0,<6",
    "types-requests>=2.28.11.15,<3",
    "black>=23.1.0,<24",
    "mapbox-vector-tile>=2.0.1,<3",
    "requests-mock>=1.10.0,<2",
    "tblib>=1.7.0,<2",
    "pytest>=9.0.2,<10",
    "pytest-django>=4.12.0,<5",
    "pytest-env>=1.1.0,<2",
    "pytest-playwright>=0.7.2,<0.8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "djangoproject.settings"
testpaths = ["dashboard/tests"]
markers = [
    "sequential: marks tests as sequential (avoids DB deadlocks when run in parallel)",
]
# Safety-net env defaults for the env-driven settings module. Loaded by
# pytest-env BEFORE Django settings are imported. Each entry uses
# `D:` prefix (= "default") which means: do NOT override values the
# developer/CI already set, but provide them if absent.
env = [
    "D:SECRET_KEY=test-secret-key-not-for-production",
    "D:DEBUG=False",
    "D:DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,testserver",
    "D:SITE_BASE_URL=http://localhost",
    "D:SITE_NAME=GBIF Alert (test)",
    "D:DATABASE_URL=postgis://postgres:postgres@127.0.0.1:5432/github_actions",
    "D:RQ_REDIS_URL=redis://127.0.0.1:6379/0",
    "D:GBIF_DOWNLOAD_USERNAME=test",
    "D:GBIF_DOWNLOAD_PASSWORD=test",
    "D:ENABLED_LANGUAGES=en,fr",
    "D:GBIF_DOWNLOAD_COUNTRY=BE",
    "D:GBIF_DOWNLOAD_YEAR_MIN=2000",
]
